-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9, 10, 16, 17, 18, 19
-
Component/s: core-svc
-
b06
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8318443 | 17.0.10-oracle | Joe Cherian | P4 | Resolved | Fixed | b04 |
| JDK-8318787 | 17.0.10 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
Seen in PIT on Linux 32/64 and Solaris-x64
[2017-03-12T17:40:55.85] # Actual: /export/home/aginfra/CommonData/TEST_JAVA_HOME/bin/java -d64 -server -Xcomp -server -Xcomp -XX:+TieredCompilation -Dsun.jvm.hotspot.runtime.VM.disableVersionCheck=1 nsk.jdi.ReferenceType.instances.instances002.instances002 -verbose -arch=solaris-amd64 -waittime=5 -debugee.vmkind=java -transport.address=dynamic "-debugee.vmkeys=-d64 -server -Xcomp -server -Xcomp -XX:+TieredCompilation"
[2017-03-12T17:40:55.85]
[2017-03-12T17:41:10.83] binder> VirtualMachineManager: version 9.0
[2017-03-12T17:41:11.92] binder> Finding connector: default
[2017-03-12T17:41:12.02] binder> LaunchingConnector:
[2017-03-12T17:41:12.16] binder> name: com.sun.jdi.CommandLineLaunch
[2017-03-12T17:41:12.17] binder> description: Launches target using Sun Java VM command line and attaches to it
[2017-03-12T17:41:12.22] binder> transport: com.sun.tools.jdi.SunCommandLineLauncher$2@20e2cbe0
[2017-03-12T17:41:13.44] binder> Connector arguments:
[2017-03-12T17:41:13.48] binder> home=/export/home/aginfra/CommonData/TEST_JAVA_HOME
[2017-03-12T17:41:13.48] binder> vmexec=java
[2017-03-12T17:41:13.48] binder> options=-d64 -server -Xcomp -server -Xcomp -XX:+TieredCompilation
[2017-03-12T17:41:13.48] binder> main=nsk.jdi.ReferenceType.instances.instances002.instances002a "-verbose" "-arch=solaris-amd64" "-waittime=5" "-debugee.vmkind=java" "-transport.address=dynamic" "-debugee.vmkeys=-d64 -server -Xcomp -server -Xcomp -XX:+TieredCompilation" "-pipe.port=63599"
[2017-03-12T17:41:13.48] binder> quote="
[2017-03-12T17:41:13.48] binder> suspend=true
[2017-03-12T17:41:13.48] binder> Launching debugee
[2017-03-12T17:41:22.45] binder> Waiting for VM initialized
[2017-03-12T17:41:22.60] Initial VMStartEvent received: VMStartEvent in thread main
[2017-03-12T17:41:33.68] debugee.stderr> Debuggee nsk.jdi.ReferenceType.instances.instances002.instances002a : sending the command: ready
[2017-03-12T17:41:40.59] binder> Breakpoint set:
[2017-03-12T17:41:40.59] breakpoint request nsk.share.jpda.AbstractDebuggeeTest:42 (disabled)
[2017-03-12T17:41:42.51] debugee.stderr> Debuggee: received the command: createInstances:nsk.share.jdi.TestClass1:10:1:STRONG
[2017-03-12T17:41:42.92] debugee.stderr> Debuggee nsk.jdi.ReferenceType.instances.instances002.instances002a : sending the command: ready
[2017-03-12T17:41:43.02] debugee.stderr> Debuggee: received the command: forceBreakpoint
[2017-03-12T17:41:43.10] binder> Waiting for event by request:
[2017-03-12T17:41:43.10] breakpoint request nsk.share.jpda.AbstractDebuggeeTest:42 (enabled)
[2017-03-12T17:41:43.52] binder> Got requested event:
[2017-03-12T17:41:43.52] BreakpointEvent@nsk.share.jpda.AbstractDebuggeeTest:42 in thread instances002a_MainThread
[2017-03-12T17:41:43.82] debugee.stderr> In breakpoint method: 'AbstractDebuggeeTest.breakpointMethod()'
[2017-03-12T17:41:43.82] debugee.stderr> Debuggee nsk.jdi.ReferenceType.instances.instances002.instances002a : sending the command: ready
[2017-03-12T17:41:43.83] debugee.stderr> Debuggee: received the command: deleteInstances:nsk.share.jdi.TestClass1:10
[2017-03-12T17:41:43.85] debugee.stderr> Debuggee nsk.jdi.ReferenceType.instances.instances002.instances002a : sending the command: ready
[2017-03-12T17:41:43.94] debugee.stderr> Debuggee: received the command: createInstances:nsk.share.jdi.TestInterfaceImplementer1:10:1:STRONG
[2017-03-12T17:41:44.02] debugee.stderr> Debuggee nsk.jdi.ReferenceType.instances.instances002.instances002a : sending the command: ready
[2017-03-12T17:41:44.08] binder> Waiting for event by request:
[2017-03-12T17:41:44.08] breakpoint request nsk.share.jpda.AbstractDebuggeeTest:42 (enabled)
[2017-03-12T17:41:44.09] debugee.stderr> Debuggee: received the command: forceBreakpoint
[2017-03-12T17:41:44.10] binder> Got requested event:
[2017-03-12T17:41:44.10] BreakpointEvent@nsk.share.jpda.AbstractDebuggeeTest:42 in thread instances002a_MainThread
[2017-03-12T17:41:44.49] # ERROR: Unexpected size of referenceType.instances(nsk.share.jdi.TestInterfaceImplementer1): 11, expected: 10
[2017-03-12T17:41:44.94] The following stacktrace is for Aurora. Used to create a RULE:
[2017-03-12T17:41:44.98] nsk.share.TestFailure: Unexpected size of referenceType.instances(nsk.share.jdi.TestInterfaceImplementer1): 11, expected: 10
[2017-03-12T17:41:45.00] at nsk.share.Log.logExceptionForAurora(Log.java:411)
[2017-03-12T17:41:45.00] at nsk.share.Log.complain(Log.java:380)
[2017-03-12T17:41:45.00] at nsk.share.jdi.HeapwalkingDebugger.checkDebugeeAnswer_instances(HeapwalkingDebugger.java:61)
[2017-03-12T17:41:45.00] at nsk.jdi.ReferenceType.instances.instances002.instances002.testClassType(instances002.java:122)
[2017-03-12T17:41:45.00] at nsk.jdi.ReferenceType.instances.instances002.instances002.doTest(instances002.java:153)
[2017-03-12T17:41:45.00] at nsk.share.jdi.TestDebuggerType2.runIt(TestDebuggerType2.java:196)
[2017-03-12T17:41:45.00] at nsk.jdi.ReferenceType.instances.instances002.instances002.run(instances002.java:24)
[2017-03-12T17:41:45.00] at nsk.jdi.ReferenceType.instances.instances002.instances002.main(instances002.java:20)
[2017-03-12T17:41:45.01] debugee.stderr> In breakpoint method: 'AbstractDebuggeeTest.breakpointMethod()'
[2017-03-12T17:41:45.01] debugee.stderr> Debuggee nsk.jdi.ReferenceType.instances.instances002.instances002a : sending the command: ready
[2017-03-12T17:41:45.01] debugee.stderr> Debuggee: received the command: deleteInstances:nsk.share.jdi.TestInterfaceImplementer1:10
[2017-03-12T17:41:45.01] debugee.stderr> Debuggee nsk.jdi.ReferenceType.instances.instances002.instances002a : sending the command: ready
[2017-03-12T17:41:45.09] # ERROR: Unexpected size of referenceType.instances(nsk.share.jdi.TestInterfaceImplementer1): 1, expected: 0
[2017-03-12T17:41:45.11] debugee.stderr> Debuggee: received the command: createInstances:byte[]:10:1:STRONG
[2017-03-12T17:41:45.11] debugee.stderr> Debuggee nsk.jdi.ReferenceType.instances.instances002.instances002a : sending the command: ready
[2017-03-12T17:41:45.76] debugee.stderr> Debuggee: received the command: createInstances:double[]:10:1:STRONG
[2017-03-12T17:41:45.76] debugee.stderr> Debuggee nsk.jdi.ReferenceType.instances.instances002.instances002a : sending the command: ready
[2017-03-12T17:41:45.93] debugee.stderr> Debuggee: received the command: createInstances:long[]:10:1:STRONG
[2017-03-12T17:41:45.93] debugee.stderr> Debuggee nsk.jdi.ReferenceType.instances.instances002.instances002a : sending the command: ready
[2017-03-12T17:41:46.12] debugee.stderr> Debuggee: received the command: createInstances:int[]:10:1:STRONG
[2017-03-12T17:41:46.12] debugee.stderr> Debuggee nsk.jdi.ReferenceType.instances.instances002.instances002a : sending the command: ready
[2017-03-12T17:41:46.30] debugee.stderr> Debuggee: received the command: createInstances:boolean[]:10:1:STRONG
[2017-03-12T17:41:46.30] debugee.stderr> Debuggee nsk.jdi.ReferenceType.instances.instances002.instances002a : sending the command: ready
[2017-03-12T17:41:46.48] debugee.stderr> Debuggee: received the command: createInstances:char[]:10:1:STRONG
[2017-03-12T17:41:46.48] debugee.stderr> Debuggee nsk.jdi.ReferenceType.instances.instances002.instances002a : sending the command: ready
[2017-03-12T17:41:46.75] debugee.stderr> Debuggee: received the command: createInstances:float[]:10:1:STRONG
[2017-03-12T17:41:46.75] debugee.stderr> Debuggee nsk.jdi.ReferenceType.instances.instances002.instances002a : sending the command: ready
[2017-03-12T17:41:46.92] debugee.stderr> Debuggee: received the command: quit
[2017-03-12T17:41:46.92] debugee.stderr> Debuggee: exiting
[2017-03-12T17:41:47.22] Debuggee's process finished with status: 95
[2017-03-12T17:41:47.22] TEST FAILED
- backported by
-
JDK-8318443 nsk/jdi/ReferenceType/instances/instances002: TestFailure: Unexpected size of referenceType.instances(nsk.share.jdi.TestInterfaceImplementer1): 11, expected: 10
-
- Resolved
-
-
JDK-8318787 nsk/jdi/ReferenceType/instances/instances002: TestFailure: Unexpected size of referenceType.instances(nsk.share.jdi.TestInterfaceImplementer1): 11, expected: 10
-
- Resolved
-
- relates to
-
JDK-8153711 [REDO] JDWP: Memory Leak: GlobalRefs never deleted when processing invokeMethod command
-
- Resolved
-
-
JDK-8181419 Race in jdwp invoker handling may lead to crashes or invalid results
-
- Resolved
-
-
JDK-4858370 JDWP: Memory Leak: GlobalRefs never deleted when processing invokeMethod command
-
- Closed
-
-
JDK-8253073 jdi/stress/serial/heapwalking002 failed with "ERROR: Unexpected size of referenceType.instances(java.lang.Thread): 11, expected: 10"
-
- Closed
-
- links to
-
Commit
openjdk/jdk17u-dev/748ccc53
-
Commit
openjdk/jdk/46fd6838
-
Review
openjdk/jdk17u-dev/1901
-
Review
openjdk/jdk/6943